--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -114,5 +114,6 @@
   "GENERAL_INFO": "Se le pedirá que responda preguntas sobre su información personal y su historial médico. Las respuestas del cuestionario se utilizarán para proporcionar recomendaciones generales sobre las vacunas que debería considerar consultar con su médico de atención primaria.",
   "NOT_SUBSTITUTE": "El cuestionario NO es un sustituto de la atención médica profesional.",
   "TARGET_INFO": "Este cuestionario está dirigido principalmente a personas sanas sin condiciones de salud subyacentes conocidas. Comience respondiendo las siguientes preguntas:",
-  "VIEW": "ver"
+  "VIEW": "ver",
+  "NOT_SURE": "No estoy seguro"
 }
